--- a/app/templates/monitor.html
+++ b/app/templates/monitor.html
@@ -1,14 +1,27 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-    <h1>{{ _('Megacorp Springfield MAS System') }}</h1>
-    <h2>{{ _('Sensor Overview') }}</h2>
-    <p>{{ _('Smoke 1: Good') }}</p>
-    <p>{{ _('Smoke 2: Good') }}</p>
-    <p>{{ _('Smoke 3: Good') }}</p>
-    <p>{{ _('Monoxide 1: Good') }}</p>
-    <p>{{ _('Monoxide 2: Good') }}</p>
-    <p>{{ _('Static 1: Good') }}</p>
-    <p>{{ _('Static 2: Good') }}</p>
-    <p>{{ _('Heat 1: Good') }}</p>
+<h2 class="sub-header">Sensor Overview</h2>
+        <div class="table-responsive">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                      <th>Sensor ID</th>
+                      <th>Sensor Name</th>
+                      <th>Sensor Alarm Value</th>
+                      <th>Sensor Class</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for d in sensors %}
+                        <tr>
+                            <td>{{ d.sensorID }}</td>   
+                            <td>{{ d.sensorName }}</td>   
+                            <td>{{ d.sensorAlarmValue }}</td>   
+                            <td>{{ d.sensorClass }}</td>
+                        </tr>
+                    {% endfor %}
+                <tbody>
+            </table>
+        </div>
 {% endblock %}
