Fixed the moniter page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('monitor') }}">{{ _('Home') }}</a></li>
-                    <li><a href="{{ url_for('configuration') }}">{{ _('System Configuration') }}</a></li>
+                    <li><a href="{{ url_for('configuration') }}">{{ _('Sensor Configuration') }}</a></li>
                     
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
