--- a/app/templates/edit_sensor.html
+++ b/app/templates/edit_sensor.html
@@ -8,4 +8,7 @@
             {{ wtf.quick_form(form) }}
         </div>
     </div>
+    <script>
+        document.getElementById('sensorID').readOnly = true; 
+    </script>
 {% endblock %}
