--- a/app/templates/mainConfig.html
+++ b/app/templates/mainConfig.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-<h2 class="sub-header">Sensor Overview</h2>
+<h2 class="sub-header">Sensor Configuration</h2>
         <div class="table-responsive">
             <table class="table table-striped">
                 <thead>
